<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always"
        />
    <item
        android:id="@+id/action_new_item"
        android:title="@string/menu_new_item"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_connect"
        android:title="@string/menu_connect"
        android:icon="@android:drawable/ic_popup_sync"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        android:icon="@drawable/about_icon"
        app:showAsAction="never"
        />
</menu>
