<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1">

    <!-- Title -->
    <TextView
        android:id="@+id/startTitle"
        style="@style/GeneralTitle"
        android:text="@string/app_name"
        android:layout_marginTop="@dimen/activity_element_spacing2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Button Container -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="320dp"
        app:layout_constraintWidth_percent="0.6">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/startDm"
            style="@style/GeneralButton"
            android:layout_width="match_parent"
            android:text="@string/dungeon_master" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/startPlayer"
            style="@style/GeneralButton"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_element_spacing2"
            android:text="@string/player" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/startAbout"
            style="@style/GeneralButton"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_element_spacing2"
            android:text="@string/about" />

    </LinearLayout>

    <!-- Fragment Overlay -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/startFragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:elevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>