<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:padding="@dimen/activity_element_spacing_land">

    <ImageButton
        android:id="@+id/aboutBackButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/back_icon"
        android:backgroundTint="@color/back_button"
        android:contentDescription="@string/character_selection_back_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/aboutTitle"
        style="@style/GeneralTitle"
        android:text="@string/about"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/aboutScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/activity_element_spacing1"
        app:layout_constraintTop_toBottomOf="@id/aboutTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <TextView
            android:id="@+id/aboutText"
            style="@style/GeneralTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_text"
            android:textSize="@dimen/small_text" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>